fix overflow y

--- a/public/dev-assets/css/2-common.css
+++ b/public/dev-assets/css/2-common.css
@@ -68,7 +68,7 @@ blockquote {
 .flexContainer {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   flex-wrap: wrap;
 }
 .flexContainerPerc {
